--- a/index2.html
+++ b/index2.html
@@ -26,4 +26,6 @@
     <button>Go back</button>
     </a>
 </body>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3695650959314712"
+     crossorigin="anonymous"></script>
 </html>
