--- a/index.html
+++ b/index.html
@@ -17,5 +17,6 @@
         </a>
 
 </body>
-<script src="main.js"></script>
+<script src="main.js" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3695650959314712"
+     crossorigin="anonymous"></script>
 </html>
