--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Bangsal Downloader</title>
     <link rel="stylesheet" href="style.css">
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3695650959314712"
+     crossorigin="anonymous"></script>
 </head>
 <body>
     <h3> BangsalSoft Downloader</h3>
