--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <title>Bangsal Downloader</title>
     <link rel="stylesheet" href="style.css">
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3695650959314712"
-     crossorigin="anonymous"></script>
+     crossorigin="anonymous" async custom-element="amp-auto-ads"
+        src="https://cdn.ampproject.org/v0/amp-auto-ads-0.1.js"></script>
 </head>
 <body>
     <h3> BangsalSoft Downloader</h3>
