--- a/index.html
+++ b/index.html
@@ -21,4 +21,7 @@
 </body>
 <script src="main.js" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3695650959314712"
      crossorigin="anonymous"></script>
+<amp-auto-ads type="adsense"
+        data-ad-client="ca-pub-3695650959314712">
+</amp-auto-ads>
 </html>
