--- a/index.html
+++ b/index.html
@@ -18,6 +18,18 @@
     <a href="index2.html">
         <button id="alert" onclick="download()">Go To Downloader</button>
         </a>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3695650959314712"
+     crossorigin="anonymous"></script>
+<!-- Ad 1 -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-3695650959314712"
+     data-ad-slot="7854180574"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 </body>
 <script src="main.js" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3695650959314712"
      crossorigin="anonymous"></script>
