--- a/minecraft.html
+++ b/minecraft.html
@@ -4,6 +4,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Minecraft</title>
     <link rel="stylesheet" href="list.css">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3695650959314712"
+     crossorigin="anonymous"></script>
 </head>
 <body>
     <h3>minecraft mod</h3>
